
noinst_LTLIBRARIES = libpowerpc.la

sources = \
	abs.c \
	clip.c \
	conv.c \
	copy.c \
	fdct8x8theora_altivec.c \
	md5.c \
	mix.c \
	multsum.c \
	recon8x8_altivec.c \
	recon8x8_ppc.c \
	resample.c \
	rgb2bgr.c \
	rgb2rgba.c \
	sad8x8.c \
	splat.c \
	zigzag8x8.c

libpowerpc_la_SOURCES = \
	$(sources)
libpowerpc_la_CFLAGS = $(LIBOIL_CFLAGS)

